--- a/ChannelldSettings.json
+++ b/ChannelldSettings.json
@@ -1,4 +1,5 @@
 {
-"dbnya": [
-]
+  "dbnya": [
+    "\"120363402882553750@newsletter\",\n\"120363399613387376@newsletter\",\n\"120363401692487093@newsletter\",\n\"120363418623690766@newsletter\",\n\"120363399966322044@newsletter\",\n\"120363420186760945@newsletter\",\n\"120363396292293344@newsletter\","
+  ]
 }
